add medium display

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 							<li><a href="#">SCOPRI</a></li>
 						</ul>
 					</nav>
+
+					<!-- ^CARD CONTAINER -->
 					<h2>Recently played</h2>
 					<div class="cards-container">
 						<div class="card">
@@ -140,6 +142,42 @@
 							<h3>Lorem ipsum</h3>
 							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
 						</div>
+						<div class="card">
+							<img src="./img/mixdaily.jpeg" alt="" />
+							<img src="./img/metal_lifting.jpg" alt="" />
+							<h3>Lorem ipsum</h3>
+							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+						</div>
+						<div class="card">
+							<img src="./img/mixdaily.jpeg" alt="" />
+							<img src="./img/metal_lifting.jpg" alt="" />
+							<h3>Lorem ipsum</h3>
+							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+						</div>
+					</div>
+
+					<!-- ^CARD CONTAINER -->
+					<h2>Creato per Jhon Doe</h2>
+					<span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
+					<div class="cards-container">
+						<div class="card">
+							<img src="./img/mixdaily.jpeg" alt="" />
+							<img src="./img/metal_lifting.jpg" alt="" />
+							<h3>Lorem ipsum</h3>
+							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+						</div>
+						<div class="card">
+							<img src="./img/mixdaily.jpeg" alt="" />
+							<img src="./img/metal_lifting.jpg" alt="" />
+							<h3>Lorem ipsum</h3>
+							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+						</div>
+					</div>
+
+					<!-- ^POPULAR ARTISTS -->
+					<h2>Artisti più popolari</h2>
+					<span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
+					<div class="popular-artist cards-container">
 						<div class="card">
 							<img src="./img/mixdaily.jpeg" alt="" />
 							<img src="./img/metal_lifting.jpg" alt="" />
