--- a/index.html
+++ b/index.html
@@ -115,80 +115,120 @@
 						</ul>
 					</nav>
 
-					<!-- ^CARD CONTAINER -->
+					<!-- ^RECENTLY PLAYED -->
 					<h2>Recently played</h2>
 					<div class="cards-container">
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/metal_lifting.jpg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Heavy Metal</h3>
+							<div class="card-subtitle">Subtitle</div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/stranger.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+							<div class="card-subtitle">Kyle & Michael Stein</div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/aquietplace.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>A quiet place</h3>
+							<div class="card-subtitle">Subtitle</div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/split.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Split</h3>
+							<div class="card-subtitle">Subtitle</div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/cure.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>A cure of wellness</h3>
+							<div class="card-subtitle">Subtitle</div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/sinister.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Sinister</h3>
+							<div class="card-subtitle">Subtitle</div>
 						</div>
 					</div>
 
-					<!-- ^CARD CONTAINER -->
+					<!-- ^CREATION FOR USER -->
 					<h2>Creato per Jhon Doe</h2>
-					<span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
+					<span class="d-none subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
 					<div class="cards-container">
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/radar.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Released Radar</h3>
+							<div class="card-subtitle"></div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/mixdaily.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Daily Mix 1</h3>
+							<div class="card-subtitle"></div>
 						</div>
 					</div>
 
 					<!-- ^POPULAR ARTISTS -->
 					<h2>Artisti più popolari</h2>
-					<span class="subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
+					<span class="d-none subtitle">Più ascolti, più accurati saranno i suggerimenti</span>
 					<div class="popular-artist cards-container">
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/youg.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Lana del Rey</h3>
+							<div class="card-subtitle"></div>
 						</div>
+						<!-- ^CARD -->
 						<div class="card">
-							<img src="./img/mixdaily.jpeg" alt="" />
-							<img src="./img/metal_lifting.jpg" alt="" />
-							<h3>Lorem ipsum</h3>
-							<div class="card-subtitle">subtitle Lorem, ipsum dolor.</div>
+							<div class="card-img">
+								<i class="fa-regular fa-circle-play"></i>
+								<img src="./img/einaudi.jpeg" alt="" />
+								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+							</div>
+							<h3>Ludovico Einaudi</h3>
+							<div class="card-subtitle"></div>
 						</div>
 					</div>
 				</div>
