--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/metal_lifting.jpg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Heavy Metal</h3>
 							<div class="card-subtitle">Subtitle</div>
@@ -133,7 +133,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/stranger.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
 							<div class="card-subtitle">Kyle & Michael Stein</div>
@@ -143,7 +143,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/aquietplace.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>A quiet place</h3>
 							<div class="card-subtitle">Subtitle</div>
@@ -153,7 +153,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/split.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Split</h3>
 							<div class="card-subtitle">Subtitle</div>
@@ -163,7 +163,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/cure.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>A cure of wellness</h3>
 							<div class="card-subtitle">Subtitle</div>
@@ -173,7 +173,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/sinister.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Sinister</h3>
 							<div class="card-subtitle">Subtitle</div>
@@ -189,7 +189,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/radar.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Released Radar</h3>
 							<div class="card-subtitle"></div>
@@ -199,7 +199,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/mixdaily.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Daily Mix 1</h3>
 							<div class="card-subtitle"></div>
@@ -215,7 +215,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/youg.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Lana del Rey</h3>
 							<div class="card-subtitle"></div>
@@ -225,7 +225,7 @@
 							<div class="card-img">
 								<i class="fa-regular fa-circle-play"></i>
 								<img src="./img/einaudi.jpeg" alt="" />
-								<img class="opacity" src="/img/output-onlinepngtools.png" alt="" />
+								<img class="opacity" src="./img/output-onlinepngtools.png" alt="" />
 							</div>
 							<h3>Ludovico Einaudi</h3>
 							<div class="card-subtitle"></div>
