add progress bar hover

--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
 				<div class="bottom">
 					<span>0:22</span>
 					<div class="progress-bar">
-						<div class="progress"></div>
+						<div class="progress">
+							<div class="progress-bar-ball"></div>
+						</div>
 					</div>
 					<span>3:21</span>
 				</div>
@@ -275,7 +277,9 @@
 				<a href="#"><i class="fa-solid fa-display"></i> </a>
 				<a href="#"><i class="fa-solid fa-volume-high"></i></a>
 				<div class="progress-bar">
-					<div class="progress"></div>
+					<div class="progress">
+						<div class="progress-bar-ball"></div>
+					</div>
 				</div>
 			</div>
 		</footer>
